apps/base/whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    toolkit.fluxcd.io/tenant: dev-team
