apps/base/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: whoami
spec:
  ports:
  - protocol: TCP
    name: web
    port: 80
    # whoami is listening on 8080 from --port argument so that non-root user
    # can run container as needs to bind to ports higher than 1024
    targetPort: 8080
  selector:
    app: whoami
